--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node testService.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PaulBeaudet/testService.git"
+  },
   "author": "Paul Beaudet",
   "license": "MIT",
   "dependencies": {
