--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "testService.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "postversion": "git push",
     "start": "node testService.js"
   },
   "repository": {
