--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.2",
-    "express": "^4.15.4",
-    "pm2": "^2.9.3"
+    "express": "^4.15.4"
   }
 }
